# destroid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: game.cpp  game.hpp  game_scene.cpp  game_scene.hpp  main.cpp
src/base/: application.cpp  application.hpp  circle.hpp  game.cpp  game.hpp  random.hpp  rectangle.hpp  window.cpp  window.hpp
src/component/: asteroid.hpp  collider.hpp  drag.hpp  drawable.hpp  lifetime.hpp  momentum.hpp  player.hpp  ship.hpp  spawner.hpp  tag.hpp  thrust.hpp  transform.hpp  velocity.hpp  weapon.hpp
src/core/: game.cpp  game.hpp  window.cpp  window.hpp
src/entity/: components.hpp  factory.cpp  factory.hpp  systems.hpp  tags.hpp
src/entity/component/: body.hpp  drawable.hpp  lifetime.hpp  velocity.hpp
src/entity/components/: drawable.hpp  thrust.hpp  transform.hpp  weapon.hpp
src/entity/system/: collision.cpp  despawn.cpp  drawing.cpp  drawing.hpp  firing.cpp  firing.hpp  input.cpp  physics.cpp
src/factory/: entity_factory.cpp  entity_factory.hpp
src/game/: game.cpp  game.hpp
src/graphics/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp
src/math/: circle.hpp  rectangle.hpp
src/system/: collision.cpp  collision.hpp  despawn.cpp  despawn.hpp  drawing.cpp  drawing.hpp  expiry.cpp  firing.cpp  input.cpp  input.hpp  movement.cpp  physics.cpp  physics.hpp  spawning.cpp  spawning.hpp  weapon.cpp  weapon.hpp
src/systems/: collision.cpp  despawn.cpp  despawn.hpp  drawing.cpp  expiry.cpp  expiry.hpp  input.cpp  movement.cpp  movement.hpp  spawning.cpp  weapon.cpp
src/utility/: rectangle.hpp
